# mikro-v17-cari-aktarim

./: .gitignore  AGENTS.md  README.md  build.bat  ornek-cari-aktarim.csv  package.json
.github/workflows/: release.yml  windows-build.yml
arac/: mikro-msgS-listesi.sql
frontend/: README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/lib/: tauri.ts
frontend/src/routes/: +layout.ts  +page.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs  settings.rs
tools/: make_icon.py
