[package]
name = "cari-aktarim"
version = "0.1.3"
description = "Mikro V17 Cari Kartı Aktarma — Trigger Yönetimli"
authors = ["hzkucuk"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "cari_aktarim_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# TDS (MSSQL) sürücüsü.
# Varsayılan feature seti: tds73 + winauth + native-tls.
#   - winauth      -> Windows Integrated Auth (AuthMethod::Integrated)
#   - native-tls   -> Windows'ta SChannel kullanır; SQL Server'ın self-signed
#                     sertifikalarıyla rustls'e göre çok daha uyumlu.
# sql-browser-tokio, "SUNUCU\INSTANCE" adlandırılmış örnek desteği sağlar.
tiberius = { version = "0.12", features = ["chrono", "sql-browser-tokio"] }

tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures-util = "0.3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
